NXP-32438: Remove comment relation implementation